istio_examples/RouteRule/api/apiDeploymentV2.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: api-v2
  labels:
    app: api
    version: v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: api
        version: v2
      name: api-v2
    spec:
      containers:
      - name: api
        image: k8s/api:v1
        ports:
        - containerPort: 5000
