istio_examples/RouteRule/api/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-v1
  labels:
    app: api
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: api
        version: v1
    spec:
      containers:
      - name: api
        image: gcr.io/training-193616/api:v1
        ports:
        - containerPort: 5000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-v2
  labels:
    app: api
    version: v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: api
        version: v2
    spec:
      containers:
      - name: api
        image: gcr.io/training-193616/api:v1
        ports:
        - containerPort: 5000
