istio_examples/RouteRule/api/service.yml
kind: Service
apiVersion: v1
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    app: api
  type: NodePort
  ports:
  - protocol: TCP
    port: 5000
    name: http
